supposed vulkanic improvements. seems to have a massive opengl slowdown